@@ -2,14 +2,14 @@
 
 ## Mô tả bài toán
 
-Hệ thống đấu giá trực tuyến cho phép người dùng tạo phiên đấu giá, đặt giá thủ công, và đăng ký tự động đấu giá (auto-bid). Hệ thống hỗ trợ ba vai trò người dùng: **Admin**, **Seller** (người bán), và **Bidder** (người mua). Giao tiếp giữa frontend (CLI) và backend đi qua một lớp `ClientActionHandler` mô phỏng luồng client–server thực tế, dùng mô hình **Command Pattern**. Dữ liệu được lưu trữ bền vững trong cơ sở dữ liệu SQLite.
+Hệ thống đấu giá trực tuyến cho phép người dùng tạo phiên đấu giá, đặt giá thủ công, và đăng ký tự động đấu giá (auto-bid). Hệ thống hỗ trợ ba vai trò người dùng: **Admin**, **Seller** (người bán), và **Bidder** (người mua). Giao tiếp giữa frontend (CLI) và backend đi qua một lớp `ClientActionHandler` mô phỏng luồng client–server thực tế, sử dụng **Command Pattern**. Dữ liệu được lưu trữ bền vững trong cơ sở dữ liệu SQLite.
 
 **Phạm vi hệ thống:**
 - Quản lý phiên đấu giá (tạo, theo dõi, kết thúc, hủy)
 - Đặt giá thủ công và tự động (auto-bid cascade)
 - Xác thực phân quyền theo vai trò
-- Tự động kết thúc phiên đấu giá theo thời gian
-- Cơ chế anti-snipe (gia hạn thêm giờ khi có bid sát giờ kết thúc)
+- Tự động kết thúc phiên đấu giá theo thời gian (Virtual Threads)
+- Cơ chế anti-snipe (gia hạn thêm thời gian khi có bid sát giờ kết thúc)
 - Thông báo sự kiện qua Observer Pattern
 
 ---
@@ -21,19 +21,20 @@ Hệ thống đấu giá trực tuyến cho phép người dùng tạo phiên đ
 | Ngôn ngữ | Java 21 |
 | Build tool | Apache Maven 3.x |
 | Giao diện | CLI (Console) |
-| Cơ sở dữ liệu | SQLite (via `sqlite-jdbc 3.45.1.0`) |
+| Cơ sở dữ liệu | SQLite (`sqlite-jdbc 3.45.1.0`) |
 | Serialization | Gson 2.10.1 |
 | Logging | SLF4J + Logback |
 | Test | JUnit Jupiter 5.10.2 |
-| Coverage | JaCoCo |
+| Coverage | JaCoCo 0.8.12 |
 | Lint | Google Checkstyle |
+| Đóng gói | maven-shade-plugin 3.5.2 (fat JAR) |
 | Đa luồng | Java Virtual Threads (JDK 21) |
 
 ### Yêu cầu cài đặt
 
-- **JDK 21** trở lên
-- **Maven 3.6+**
-- Không cần cài SQLite riêng (driver đã nhúng trong `pom.xml`)
+- **JDK 21** trở lên (`java -version` để kiểm tra)
+- **Maven 3.6+** (`mvn -version` để kiểm tra)
+- Không cần cài SQLite riêng — driver đã được đóng gói trong JAR
 
 ---
 
@@ -53,22 +54,23 @@ Online-Auction-System/
 │   │   ├── backend/                         # Business logic
 │   │   │   ├── auction/   (AuctionService, AuctionManager, AuctionScheduler, AuctionValidator)
 │   │   │   ├── auth/      (AuthService)
-│   │   │   ├── bid/       (BidService, BidValidator, AutoBidService, AutoBidManager, BidHistoryManager, BidResult)
+│   │   │   ├── bid/       (BidService, BidValidator, AutoBidService, AutoBidManager, BidHistoryManager)
 │   │   │   ├── database/  (DatabaseManager, DatabaseConnection, DataManager, dao/)
-│   │   │   ├── observer/  (AuctionEvent, AuctionEventPublisher, AuctionEventType, observers/)
+│   │   │   ├── observer/  (AuctionEventPublisher, observers/)
 │   │   │   ├── payment/   (PaymentProcessor, PaymentValidator, PaymentLogger)
 │   │   │   └── util/      (IdGenerator, PasswordHasher)
 │   │   ├── network/                         # Lớp giao tiếp client–server
 │   │   │   ├── ClientActionHandler.java
 │   │   │   ├── ClientMessage.java
-│   │   │   ├── ServerMessage.java
 │   │   │   ├── ActionType.java
-│   │   │   └── command/   (ClientCommand, BidCommand, LoginCommand, CreateAuctionCommand, ...)
+│   │   │   └── command/   (LoginCommand, BidCommand, CreateAuctionCommand, ...)
 │   │   └── exceptions/                      # Custom exceptions
 │   └── test/                                # Unit tests & concurrency tests
-├── docs/                                    # Tài liệu tham khảo
-├── auction_system.db                        # SQLite DB (tự tạo khi chạy)
-└── pom.xml
+├── target/
+│   └── online-auction-system-1.0-SNAPSHOT.jar   # ← Executable fat JAR
+├── docs/
+├── pom.xml
+└── README.md
 ```
 
 ### Các module chính
@@ -78,7 +80,7 @@ Online-Auction-System/
 | `models/` | Định nghĩa entity thuần — không có logic nghiệp vụ |
 | `backend/auction/` | Tạo, kết thúc, hủy phiên đấu giá; lên lịch tự động |
 | `backend/bid/` | Xử lý bid thủ công, auto-bid cascade |
-| `backend/auth/` | Đăng ký, đăng nhập, xác thực mật khẩu (bcrypt-like hashing) |
+| `backend/auth/` | Đăng ký, đăng nhập, xác thực mật khẩu |
 | `backend/database/` | DAO layer, kết nối SQLite, khởi tạo schema |
 | `backend/observer/` | Phát và nhận sự kiện đấu giá (Observer Pattern) |
 | `backend/payment/` | Xử lý và hoàn tiền qua Strategy Pattern |
@@ -86,61 +88,74 @@ Online-Auction-System/
 
 ---
 
+## Vị trí file JAR
+
+Sau khi build, file fat JAR nằm tại:
+
+```
+target/online-auction-system-1.0-SNAPSHOT.jar
+```
+
+File này bao gồm toàn bộ dependencies (SQLite, Gson, Logback, ...) và có thể chạy độc lập mà không cần cài thêm thư viện.
+
+---
+
 ## Hướng dẫn chạy
 
-### Bước 1 — Build dự án
+### Cách 1 — Chạy trực tiếp từ fat JAR (khuyến nghị)
+
+**Bước 1:** Build fat JAR
 
 ```bash
-mvn compile
+mvn package -DskipTests
 ```
 
-> Lần đầu Maven sẽ tải dependencies (~vài trăm MB). Những lần sau sẽ nhanh hơn.
-
-### Bước 2 — Chạy ứng dụng CLI
+**Bước 2:** Chạy ứng dụng
 
 ```bash
-mvn exec:java
+java -jar target/online-auction-system-1.0-SNAPSHOT.jar
 ```
 
-Lệnh này sẽ:
-1. Xóa và tạo lại `auction_system.db` (fresh start mỗi lần chạy).
-2. Hiển thị banner CLI và menu tương tác.
+> Nếu gặp cảnh báo về native access của SQLite, thêm flag sau để tắt warning:
+> ```bash
+> java --enable-native-access=ALL-UNNAMED -jar target/online-auction-system-1.0-SNAPSHOT.jar
+> ```
 
-> **Lưu ý:** Mỗi lần khởi động, database sẽ được reset hoàn toàn. Đây là thiết kế có chủ ý để demo luôn bắt đầu từ trạng thái sạch.
+---
 
-### Bước 3 — Tương tác qua CLI
-
-Sau khi khởi động, menu chính xuất hiện:
-
-```
-  ╔══════════════════════════════════════════════╗
-  ║    HỆ THỐNG ĐẤU GIÁ ONLINE — CLI Demo       ║
-  ╚══════════════════════════════════════════════╝
-
-  ┌──────────────────────────────────────────────────┐
-  │  HỆ THỐNG ĐẤU GIÁ ONLINE                        │
-  └──────────────────────────────────────────────────┘
-  1. Đăng ký tài khoản
-  2. Đăng nhập
-  0. Thoát
-```
-
-**Thứ tự thao tác gợi ý khi demo:**
-
-1. Đăng ký tài khoản **SELLER** → đăng nhập → tạo auction mới.
-2. Đăng xuất → đăng ký tài khoản **BIDDER** → đăng nhập → xem danh sách auction → đặt giá.
-3. (Tùy chọn) Đăng ký thêm BIDDER thứ hai để thử auto-bid cascade.
-4. Đăng nhập lại SELLER (hoặc ADMIN) → kết thúc auction thủ công hoặc chờ hết giờ.
-
-### Chạy test
+### Cách 2 — Chạy qua Maven (không cần build JAR trước)
 
 ```bash
+mvn compile exec:java
+```
+
+---
+
+### Thứ tự thao tác demo
+
+Ứng dụng là CLI đơn tiến trình (không tách Server/Client riêng). Thứ tự thao tác gợi ý:
+
+| Bước | Thao tác |
+|---|---|
+| 1 | Đăng ký tài khoản **SELLER** → Đăng nhập → Tạo auction mới |
+| 2 | Đăng xuất → Đăng ký tài khoản **BIDDER** → Đăng nhập → Đặt giá thủ công |
+| 3 | (Tùy chọn) Đăng ký thêm BIDDER thứ hai để thử **auto-bid cascade** |
+| 4 | Đăng nhập lại SELLER hoặc ADMIN → Kết thúc auction thủ công |
+
+> Mỗi lần khởi động, database `auction_system.db` sẽ được **reset hoàn toàn** — đây là thiết kế có chủ ý để mỗi lần chạy bắt đầu từ trạng thái sạch.
+
+---
+
+### Các lệnh hữu ích khác
+
+```bash
+# Chạy toàn bộ unit tests
 mvn test
-```
 
-### Kiểm tra code style
+# Build JAR kèm chạy tests
+mvn package
 
-```bash
+# Kiểm tra Google Java Style
 mvn checkstyle:check
 ```
 
@@ -156,9 +171,9 @@ mvn checkstyle:check
 ### Quản lý Phiên đấu giá
 - [x] Tạo auction mới (Seller) với thông tin sản phẩm, giá khởi điểm, thời gian
 - [x] Xem danh sách toàn bộ auction và trạng thái hiện tại
-- [x] Kết thúc auction thủ công (Seller chỉ được auction của mình; Admin được tất cả)
-- [x] Hủy auction (Seller chỉ được auction của mình; Admin được tất cả)
-- [x] Tự động kết thúc auction theo thời gian (dùng Java Virtual Threads + ScheduledExecutorService)
+- [x] Kết thúc auction thủ công (Seller: chỉ auction của mình; Admin: tất cả)
+- [x] Hủy auction (Seller: chỉ auction của mình; Admin: tất cả)
+- [x] Tự động kết thúc auction theo thời gian (Java Virtual Threads + `ScheduledExecutorService`)
 - [x] Cơ chế **anti-snipe**: tự động gia hạn auction khi có bid trong khoảng thời gian cuối
 
 ### Đặt Giá
@@ -188,3 +203,12 @@ mvn checkstyle:check
 - [x] Concurrency test (`ConcurrentBiddingTest`) kiểm thử đặt giá đồng thời
 - [x] Code coverage đo bằng JaCoCo
 - [x] Tuân thủ Google Java Style Guide qua Checkstyle
+
+---
+
+## Báo cáo & Demo
+
+| Tài liệu | Link |
+|---|---|
+| Báo cáo PDF | *(sẽ cập nhật)* |
+| Video demo | *(sẽ cập nhật)* |
